--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/bebas-neue": "^4.5.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
